--- a/src/css/inc/cards.css
+++ b/src/css/inc/cards.css
@@ -1,83 +1,113 @@
-@keyframes summon {
-  0% {
-    transform: scale(1.3) translate(0, -20vh);
-    //transform: scale(.1) rotate(180deg);
-    opacity: 0;
-  }
-
-  100% {
-    transform: scale(1) translate(0, 0);
-    //transform: scale(1) rotate(0deg);
-    opacity: 1;
-  }
+card-recto,
+card-verso {
+  display: block;
 }
 
-@keyframes banish {
-  0% {
-    transform: scale(1) translate(0, 0);
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(.1) translate(1000px, 2000px);
-    opacity: 0;
-  }
-}
-
-.card-container {
-  &.summon {
-    & .𝔘𝔫𝔥𝔬𝔩𝔡 {
-      animation: summon 1s ease-in;
+character-card {
+  &.editable {
+    & article {
+      height: 100%;
     }
-  }
 
-  &.banish {
-    & .𝔘𝔫𝔥𝔬𝔩𝔡 {
-      animation: banish 1s ease-out;
+    & figure {
+      background: none;
+      &::before,
+      &::after {
+        content: normal;
+      }
+      box-shadow: none;
+    }
+
+    & card-verso {
+      flex: 2;
+
+      & figure {
+        width: auto;
+      }
+
+      & table {
+        display: block;
+        column-count: 2;
+        column-gap: 4rem;
+        padding: 0;
+        list-style: none;
+        font-size: 1.3rem;
+      }
+
+      & tr {
+        border-bottom: var(--border);
+        &[data-display="false"] {
+          display: flex;
+          opacity: 0.6;
+        }
+        &[data-display="immutable"] {
+          display: flex;
+          & td {
+            &:last-child {
+              display: block;
+            }
+          }
+        }
+        &[data-key="img"] {
+          & td {
+            &:nth-last-child(2)  {
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              text-align: right;
+            }
+          }
+        }
+      }
+
+      & th,
+      & td {
+        display: block;
+        text-align: left;
+        white-space: normal;
+        vertical-align: top;
+        padding: 2px;
+        &::after {
+          content: normal;
+        }
+      }
+
+      & th {
+        min-width: 8rem;
+      }
+
+      & td {
+        max-width: 35rem;
+        &:nth-last-child(2) {
+          flex: 2;
+        }
+        &:last-child {
+          display: flex;
+          gap: 1rem;
+        }
+      }
+
+      & svg {
+        width: 1.2rem;
+        aspect-ratio: 1 / 1;
+        fill: hsl(var(--c-border-h) var(--c-border-s) var(--c-border-l));
+        filter: contrast(25%);
+        cursor: pointer;
+      }
+
+      & .badge {
+        display: none;
+      }
     }
   }
 }
 
 .𝔘𝔫𝔥𝔬𝔩𝔡 {
   display: flex;
-  gap: .6rem;
+  gap: 0.6rem;
   position: relative;
-  font-family: 'Della Respira';
-  padding-bottom: 3rem;
+  font-family: "Della Respira";
   transform-origin: 50%;
-
-  & .toolbar {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: -.8rem;
-    z-index: 3;
-    gap: .5rem;
-    justify-content: center;
-  }
-
-  & button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    border-radius: var(--border-radius);
-    gap: 1rem;
-    font-size: 1.5rem;
-    font-family: var(--font-family);
-    cursor: pointer;
-    padding: .6rem 1rem .6rem 1.6rem;
-    background: var(--c-button-bg);
-    color: var(--c-button-color);
-    box-shadow: .24rem .24rem .64rem 0 var(--c-box-shadow-color);
-
-    & svg {
-      width: 2rem;
-      aspect-ratio: 1 / 1;
-      fill: var(--c-button-color);
-    }
-  }
 
   & figure {
     position: relative;
@@ -87,31 +117,33 @@
     height: 31.6rem;
     margin: 0;
     display: flex;
-    gap: .8rem;
+    gap: 0.8rem;
     align-items: center;
-    background: var(--c-bg-color) var(--c-bg-pattern);
+    background: hsl(var(--c-bg-h) var(--c-bg-s) var(--c-bg-l))
+      var(--c-bg-pattern);
     justify-content: flex-end;
-    box-shadow: .24rem .24rem .64rem 0 var(--c-box-shadow-color);
+    box-shadow: 0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color);
     padding: 1.6rem;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
-      border: 1.12rem solid var(--c-border-color);
+      border: 1.12rem solid
+        hsl(var(--c-border-h) var(--c-border-s) var(--c-border-l));
     }
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
-      background: var(--c-border-pattern);
+      background-image: var(--c-border-pattern);
     }
 
     & img {
@@ -125,7 +157,7 @@
       flex-direction: column;
 
       & .badge {
-        bottom: -.9rem;
+        bottom: -0.9rem;
       }
     }
 
@@ -133,15 +165,15 @@
       flex-direction: column-reverse;
 
       & .badge {
-        top: -.9rem;
+        top: -0.9rem;
 
         &.cr {
           top: auto;
           display: inline-block;
           position: absolute;
-          right: .56rem;
-          bottom: .56rem;
-          padding: .16rem .8rem;
+          right: 0.56rem;
+          bottom: 0.56rem;
+          padding: 0.16rem 0.8rem;
           font-size: 1.5rem;
           line-height: 1.3;
           border-radius: 50%;
@@ -153,82 +185,58 @@
       z-index: 3;
       position: relative;
       border-style: ridge;
-      border-width: .24rem;
-      background: var(--c-badge-bg);
-      color: var(--c-badge-color);
-      border-color: var(--c-badge-border-color);
+      border-width: 0.24rem;
+      background: hsl(var(--c-badge-h) var(--c-badge-s) var(--c-badge-l));
+      color: hsl(
+        var(--c-badge-h),
+        calc(var(--c-badge-s) + 41%),
+        calc(var(--c-badge-l) - 37%)
+      );
+      border-color: hsl(
+        var(--c-badge-h),
+        calc(var(--c-badge-s) + 41%),
+        calc(var(--c-badge-l) - 37%)
+      );
       border-radius: 10% 20%;
       text-align: center;
-      padding: .16rem .8rem;
+      padding: 0.16rem 0.8rem;
       font: bold 1.6rem var(--c-badge-font);
-      text-shadow: .08rem .08rem 0 var(--c-badge-text-shadow-color);
+      text-shadow: 0.08rem 0.08rem 0 var(--c-badge-text-shadow-color);
       display: inline-block;
-      box-shadow: .16rem .16rem .32rem 0 var(--c-box-shadow-color);
+      box-shadow: 0.16rem 0.16rem 0.32rem 0 var(--c-box-shadow-color);
     }
   }
 
   & table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 18rem;
-    font-size: 1.2rem;
+    display: flex;
+    font-size: 1.1rem;
+    line-height: 1.8rem;
+    flex-wrap: wrap;
+    gap: 0 1.2ch;
 
-    & td {
-      text-align: left;
-      vertical-align: top;
-      padding: .24rem .48rem;
-
-      &.disable-row {
+    & tr {
+      display: flex;
+      gap: 0.5ch;
+      &[data-display="false"],
+      &[data-display="immutable"] {
         display: none;
       }
     }
 
-    & tr {
-      &:nth-last-child(2) {
-        & td {
-          padding-bottom: .8rem;
-          border-bottom: .1rem solid #186b5b;
-        }
-      }
-
-      &:last-child {
-        & td {
-          padding-top: .8rem;
-        }
+    & th {
+      display: inline-block;
+      white-space: nowrap;
+      color: hsl(var(--c-border-h) var(--c-border-s) var(--c-border-l));
+      filter: contrast(25%);
+      &::after {
+        content: ":";
       }
     }
 
     & td {
-      &.long-text {
-        & ul {
-          margin: 0;
-          padding: 0;
-          list-style: none;
-        }
-      }
-
-      &.value {
-        //white-space: nowrap;
-        color: var(--c-badge-color);
-        font-weight: bold;
-      }
-
-      & .value-part {
-        &::before {
-          content: "|";
-          display: inline-block;
-          color: #999;
-          height: .8rem;
-          width: .08rem;
-          padding: 0 .8rem;
-        }
-
-        &:first-of-type {
-          &::before {
-            content: normal;
-          }
-        }
+      display: inline-block;
+      &:last-child {
+        display: none;
       }
     }
   }
