--- a/src/css/inc/style-editor.css
+++ b/src/css/inc/style-editor.css
@@ -6,7 +6,7 @@
   & [data-target="bg"] {
     & pattern-selector {
       & li {
-        background-color: hsl(var(--c-bg-h), var(--c-bg-s), var(--c-bg-l));
+        background-color: hsl(var(--c-bg-h) var(--c-bg-s) var(--c-bg-l));
       }
     }
   }
@@ -43,12 +43,12 @@
 
     & li {
       min-width: calc(100% / 3);
-      background-color: var(--c-bg-color);
+      background-color: hsl(var(--c-bg-h) var(--c-bg-s) var(--c-bg-l));
     }
 
     &[type="borders"] {
       & li {
-        background-color: var(--c-border-color);
+        background-color: hsl(var(--c-border-h) var(--c-border-s) var(--c-border-l));
         background-size: 35rem;
       }
       & label {
@@ -57,7 +57,7 @@
           content: "";
           display: block;
           position: absolute;
-          background: var(--c-bg-color) var(--c-bg-pattern);
+          background: hsl(var(--c-bg-h) var(--c-bg-s) var(--c-bg-l)) var(--c-bg-pattern);
           left: 1.7rem;
           top: 1.7rem;
           width: calc(100% - 1.7rem);
@@ -69,8 +69,9 @@
 
     & label {
       aspect-ratio: 4 / 3;
-      border: 0.3rem solid var(--bg-1-color);
+      border: 0.4rem solid var(--bg-1-color);
       cursor: pointer;
+      
     }
 
     & input {
@@ -81,7 +82,62 @@
       outline: none;
 
       &:checked ~ label {
-        border-color: var(--hd-color);
+        border: 0.4rem groove var(--hd-color);
+      }
+    }
+  }
+
+  & color-selector {
+    display: block;
+  }
+
+  & color-selector label {
+    display: flex;
+  }
+
+  & color-selector span {
+    padding: 3px;
+    min-width: 1.5rem;
+    & ~ span {
+      flex: 2;
+    }
+  }
+
+  & color-selector [type="range"] {
+    position: relative;
+    top: -0.1rem;
+    appearance: none;
+    background: silver;
+    height: 0.6rem;
+    padding: 0;
+    outline: none;
+    width: 100%;
+
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      height: 1.6rem;
+      width: 1.6rem;
+      border-radius: 50%;
+      background: var(--hd-color);
+      opacity: 0.7;
+      cursor: ew-resize;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    &::-moz-range-thumb {
+      -webkit-appearance: none;
+      height: 1.6rem;
+      width: 1.6rem;
+      border-radius: 50%;
+      background: var(--hd-color);
+      cursor: ew-resize;
+      opacity: 0.7;
+
+      &:hover {
+        opacity: 1;
       }
     }
   }
