--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,9 +5,16 @@
 @import './inc/scrollbars.css';
 @import './inc/header.css';
 @import './inc/content.css';
-@import './inc/cards.css';
-@import './inc/character-card.css';
+@import './inc/character-library.css';
+@import './inc/library-organizer.css';
+@import './inc/card-base.css';
+@import './inc/card-recto.css';
+@import './inc/card-verso.css';
 @import './inc/card-toolbar.css';
+@import './inc/card-form.css';
+@import './inc/pattern-selector.css';
+@import './inc/font-selector.css';
+@import './inc/color-selector.css';
 @import './inc/forms.css';
 @import './inc/library.css';
 @import './inc/editor.css';
