--- a/src/css/inc/editor.css
+++ b/src/css/inc/editor.css
@@ -5,9 +5,11 @@
   & .column-content {
     padding: 3.5rem 2.5rem;
     display: flex;
+    //justify-content: space-around;
     gap: 2.5rem;
     flex-wrap: wrap;
-    background: hsl(29, 33%, 34%) url(../media/patterns/system/light-rocky-wall.png);
+    background: hsl(29, 33%, 34%)
+      url(../media/patterns/system/light-rocky-wall.png);
   }
 
   & #smoke {
