--- a/src/css/inc/card-form.css
+++ b/src/css/inc/card-form.css
@@ -69,6 +69,8 @@ card-form {
     & td {
       &:nth-child(3) {
         flex: 2;
+        resize: vertical;
+        overflow: auto;
       }
     }
   }
