--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@
 @import './inc/card-form.css';
 @import './inc/pattern-selector.css';
 @import './inc/font-selector.css';
+@import './inc/range-selector.css';
 @import './inc/color-selector.css';
 @import './inc/forms.css';
 @import './inc/library.css';
