--- a/public/css/main.css
+++ b/public/css/main.css
@@ -226,6 +226,9 @@ template{
 
   --c-button-bg:hsla(15, 50%, 15%, 0.9);
   --c-button-color:var(--text-color);
+
+  --c-card-font-size:1.1rem;
+  --c-badge-font-size:1.5rem;
 }
 
 html{
@@ -388,7 +391,7 @@ section.column .column-heading{
 
 section.column h3{
       margin:0;
-      font-size:1.6rem;
+      font-size:1.5rem;
       font-weight:400;
     }
 
@@ -616,7 +619,7 @@ card-base .badge{
     text-align:center;
     padding:0.16rem 0.8rem;
     font:bold 1.5rem "Della Respira", serif;
-    font:bold 1.5rem var(--c-badge-font);
+    font:bold var(--c-badge-font-size) var(--c-badge-font);
     text-shadow:0.08rem 0.08rem 0 hsla(0, 100%, 100%, 0.3);
     text-shadow:0.08rem 0.08rem 0 var(--c-badge-text-shadow-color);
     display:inline-block;
@@ -646,6 +649,10 @@ card-base.editable .card-view{
 card-base.editable article{
       height:100%;
       gap:1rem
+    }
+
+[data-card-state="edit"] card-base:not(.editable){
+      display:none;
     }
 
 card-recto{
@@ -694,7 +701,8 @@ card-verso tbody{
     width:calc(100% - 1rem);
     display:flex;
     font-size:1.1rem;
-    line-height:1.8rem;
+    font-size:var(--c-card-font-size);
+    line-height:1.6;
     flex-wrap:wrap;
     gap:0 1.2ch;
     overflow-y:auto;
@@ -764,7 +772,7 @@ card-toolbar{
   justify-content:flex-end;
   gap:1rem;
   opacity:0;
-  align-items:middle;
+  align-items:center;
   background:hsla(15, 50%, 15%, 0.9);
   background:var(--c-button-bg);
   z-index:4;
@@ -789,8 +797,12 @@ card-toolbar button{
     color:hsla(0, 0%, 95%, .90);
     color:var(--c-button-color);
     box-shadow:0.24rem 0.24rem 0.64rem 0 hsla(0, 0%, 0%, 0.4);
-    box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color);
+    box-shadow:0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color)
   }
+
+card-toolbar button[name="done"]{
+      display:none;
+    }
 
 card-toolbar svg{
     width:2rem;
@@ -803,9 +815,24 @@ card-base:hover card-toolbar{
       opacity:1;
     }
 
-card-base.editable card-toolbar{
-      display:none;
+[data-card-state="edit"] .editable card-toolbar{
+      display:flex;
+      opacity:1;
+      top:0;
+      width:auto;
+      left:auto;
+      right:0;
+      background:none;
+      bottom:auto
     }
+
+[data-card-state="edit"] .editable card-toolbar button[name="done"]{
+          display:flex;
+        }
+
+[data-card-state="edit"] .editable card-toolbar button:not([name="done"]){
+          display:none;
+        }
 
 card-form{
   display:none;
@@ -818,16 +845,6 @@ card-form{
   color:var(--c-color);
   position:relative
 }
-
-card-form > svg.quill{
-      position:absolute;
-      right:2rem;
-      top:3rem;
-      width:5rem;
-      cursor:default;
-      fill:hsl(15, 50%, 36%);
-      fill:var(--bg-6-color);
-    }
 
 card-form [contenteditable]{
     border:0.1rem dotted hsl(15, 50%, 36%);
@@ -893,11 +910,6 @@ card-form tbody td:nth-child(3){
         flex:2;
         resize:vertical;
         overflow-y:auto;
-      }
-
-card-form tbody.dragging td, card-form tbody.dragging th{
-        max-height:2.6rem;
-        overflow:hidden;
       }
 
 card-form tr{
@@ -978,12 +990,8 @@ card-form [data-label="false"] use[href*="show-label"]{
       }
 
 card-form [data-label="false"] th{
-      opacity:.5
+      opacity:0.5;
     }
-
-card-form .dragElem{
-    display:none
-  }
 
 card-form .dragover{
     border-bottom:3px green solid;
@@ -1084,37 +1092,25 @@ font-selector{
   display:block;
 }
 
-color-selector{
-  display:block
+font-size:{
+  display:block;
 }
 
-color-selector label{
-    display:flex;
-  }
-
-color-selector span{
-    padding:3px;
-    min-width:1.5rem
-  }
-
-color-selector span ~ span{
-      flex:2;
-    }
-
-color-selector [type="range"]{
+input[type="range"]{
     position:relative;
     top:-0.1rem;
     -webkit-appearance:none;
        -moz-appearance:none;
             appearance:none;
-    background:silver;
+    background:hsl(15, 50%, 28%);
+    background:var(--bg-4-color);
     height:0.6rem;
     padding:0;
     outline:none;
     width:100%
   }
 
-color-selector [type="range"]::-webkit-slider-thumb{
+input[type="range"]::-webkit-slider-thumb{
       -webkit-appearance:none;
       height:1.6rem;
       width:1.6rem;
@@ -1125,11 +1121,11 @@ color-selector [type="range"]::-webkit-slider-thumb{
       cursor:ew-resize
     }
 
-color-selector [type="range"]::-webkit-slider-thumb:hover{
+input[type="range"]::-webkit-slider-thumb:hover{
         opacity:1;
       }
 
-color-selector [type="range"]::-moz-range-thumb{
+input[type="range"]::-moz-range-thumb{
       -webkit-appearance:none;
       height:1.6rem;
       width:1.6rem;
@@ -1140,12 +1136,33 @@ color-selector [type="range"]::-moz-range-thumb{
       opacity:0.7
     }
 
-color-selector [type="range"]::-moz-range-thumb:hover{
+input[type="range"]::-moz-range-thumb:hover{
         opacity:1;
       }
 
+color-selector{
+  display:block
+}
+
+color-selector[type] > label{
+      display:flex;
+      align-items:center;
+      padding:0.1rem 0;
+      gap:.5rem;
+      font-size:1.3rem
+    }
+
+color-selector[type] > label span{
+        padding:3px;
+        min-width:1.5rem
+      }
+
+color-selector[type] > label span ~ span{
+          flex:2;
+        }
+
 form .form-row{
-    padding:1rem;
+    padding:1rem 1rem 0 1rem;
     margin-bottom:0.5rem;
   }
 
@@ -1169,16 +1186,8 @@ form legend{
 
 form label{
     display:block;
-    font-size:1.4rem
+    font-size:1.4rem;
   }
-
-form label.slider-label{
-      display:flex;
-      align-items:center;
-      padding:0.5rem 0;
-      gap:2rem;
-      font-size:1.3rem;
-    }
 
 form select,
   form option{
@@ -1200,9 +1209,9 @@ form .control{
   }
 
 #library{
-  min-width:25rem;
+  min-width:20rem;
   max-width:30rem;
-  width:25rem;
+  width:15%;
   overflow:visible;
   transition:width .5s
 }
@@ -1264,11 +1273,13 @@ form .control{
         background:var(--bg-5-color);
       }
 
-[data-card-state="edit"] #library{
-    width:0;
-    overflow:hidden;
-    min-width:0;
-  }
+@media screen and (max-width: 1500px){
+    [data-card-state="edit"] #library{
+      width:0;
+      overflow:hidden;
+      min-width:0;
+    }
+}
 
 #editor{
   flex:2;
@@ -1294,9 +1305,9 @@ form .control{
   }
 
 #style-editor{
-  min-width:25rem;
+  min-width:20rem;
   max-width:30rem;
-  width:25rem;
+  width:15%;
 }
 
 footer{
