--- a/src/css/inc/card-toolbar.css
+++ b/src/css/inc/card-toolbar.css
@@ -9,7 +9,7 @@ card-toolbar {
   justify-content: flex-end;
   gap: 1rem;
   opacity: 0;
-  align-items: middle;
+  align-items: center;
   background: var(--c-button-bg);
   z-index: 4;
   transition: opacity 0.5s;
@@ -28,6 +28,9 @@ card-toolbar {
     background: var(--c-button-bg);
     color: var(--c-button-color);
     box-shadow: 0.24rem 0.24rem 0.64rem 0 var(--c-box-shadow-color);
+    &[name="done"] {
+      display: none;
+    }
   }
 
   & svg {
@@ -43,10 +46,27 @@ card-base {
       opacity: 1;
     }
   }
+}
 
-  &.editable {
+[data-card-state="edit"] {
+  & .editable {
     & card-toolbar {
-      display: none;
+      display: flex;
+      opacity: 1;
+      top: 0;
+      width: auto;
+      left: auto;
+      right: 0;
+      background: none;
+      bottom: auto;
+      & button {
+        &[name="done"] {
+          display: flex;
+        }
+        &:not([name="done"]) {
+          display: none;
+        }
+      }
     }
   }
 }
