--- a/src/css/inc/color-selector.css
+++ b/src/css/inc/color-selector.css
@@ -1,52 +1,19 @@
 color-selector {
   display: block;
 
-  & label {
-    display: flex;
-  }
-
-  & span {
-    padding: 3px;
-    min-width: 1.5rem;
-    & ~ span {
-      flex: 2;
-    }
-  }
-  & [type="range"] {
-    position: relative;
-    top: -0.1rem;
-    appearance: none;
-    background: silver;
-    height: 0.6rem;
-    padding: 0;
-    outline: none;
-    width: 100%;
-
-    &::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      height: 1.6rem;
-      width: 1.6rem;
-      border-radius: 50%;
-      background: var(--hd-color);
-      opacity: 0.7;
-      cursor: ew-resize;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-
-    &::-moz-range-thumb {
-      -webkit-appearance: none;
-      height: 1.6rem;
-      width: 1.6rem;
-      border-radius: 50%;
-      background: var(--hd-color);
-      cursor: ew-resize;
-      opacity: 0.7;
-
-      &:hover {
-        opacity: 1;
+  &[type] {
+    & > label {
+      display: flex;
+      align-items: center;
+      padding: 0.1rem 0;
+      gap: .5rem;
+      font-size: 1.3rem;
+      & span {
+        padding: 3px;
+        min-width: 1.5rem;
+        & ~ span {
+          flex: 2;
+        }
       }
     }
   }
