--- a/src/css/inc/forms.css
+++ b/src/css/inc/forms.css
@@ -1,6 +1,6 @@
 form {
   & .form-row {
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
     margin-bottom: 0.5rem;
   }
 
@@ -21,13 +21,6 @@ form {
   & label {
     display: block;
     font-size: 1.4rem;
-    &.slider-label {
-      display: flex;
-      align-items: center;
-      padding: 0.5rem 0;
-      gap: 2rem;
-      font-size: 1.3rem;
-    }
   }
 
   & select,
