--- a/src/css/inc/library.css
+++ b/src/css/inc/library.css
@@ -1,7 +1,7 @@
 #library {
-  min-width: 25rem;
+  min-width: 20rem;
   max-width: 30rem;
-  width: 25rem;
+  width: 15%;
   overflow: visible;
   transition: width .5s;
 
@@ -49,10 +49,12 @@
   }
 }
 
-[data-card-state="edit"] {
-  & #library {
-    width: 0;
-    overflow: hidden;
-    min-width: 0;
+@media screen and (max-width: 1500px) {
+  [data-card-state="edit"] {
+    & #library {
+      width: 0;
+      overflow: hidden;
+      min-width: 0;
+    }
   }
 }
