--- a/src/css/inc/base.css
+++ b/src/css/inc/base.css
@@ -19,7 +19,7 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   margin: 0;
-  padding:0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -38,7 +38,12 @@ details {
     & summary {
       &:before {
         transform: rotate(-90deg);
-        top: .9rem;
+        top: 0.9rem;
+      }
+    }
+    & ~ details {
+      & summary {
+        border-top: 1px solid var(--border-color);
       }
     }
   }
@@ -54,17 +59,18 @@ summary {
   overflow: hidden;
   text-overflow: ellipsis;
   border: 1px solid var(--border-color);
+  border-top: none;
   list-style: none;
 
   &:before {
     content: "❯";
-    font-size: .9rem;
+    font-size: 0.9rem;
     position: absolute;
     display: inline-block;
     transform: rotate(90deg);
     transform-origin: center;
     right: 1rem;
-    top: .8rem;
+    top: 0.8rem;
   }
 
   &::marker {
