--- a/src/css/inc/defs.css
+++ b/src/css/inc/defs.css
@@ -1,8 +1,8 @@
 :root {
   --bg-color: hsl(0, 0%, 0%);
   --text-color: hsl(0 0% 95% / .90);
-  --border-color: hsl(46, 85%, 39%, .2);
-  --border-radius: .2rem;
+  --border-color: hsl(46, 85%, 39%, .3);
+  --border-radius: .3rem;
   --border: .1rem solid var(--border-color);
   --font-family: 'Caudex', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
@@ -13,6 +13,8 @@
   --bg-4-color: hsl(15, 50%, 28%);
   --bg-5-color: hsl(15, 50%, 32%);
   --bg-6-color: hsl(15, 50%, 36%);
+
+  --bg-light: hsl(29, 33%, 34%);
 
   --logo-color: hsl(46, 85%, 39%);
   --hd-color: 	hsl(44, 81%, 38%);
