--- a/src/css/inc/tab-navi.css
+++ b/src/css/inc/tab-navi.css
@@ -3,9 +3,8 @@ tab-navi {
   background: var(--bg-2-color);
   line-height: 2;
   overflow: hidden;
-  border-bottom: 1px solid var(--border-color);
-  gap: .5rem;
-  padding: 0 .5rem;
+  border-bottom: .1rem solid var(--border-color);
+  padding: 0;
   & .btn {
     cursor: pointer;
     font-size: 2.2rem;
@@ -14,9 +13,18 @@ tab-navi {
     line-height: 1;
   }
   & .tab {
-    border: 1px solid var(--border-color);
-    border-top: none;
-    border-bottom: none;
-    padding: 0 1rem;
+    cursor: pointer;
+    border-left: var(--border);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    display: flex;
+    padding: 0 1.25rem;
+    gap: 1rem;
+    &:hover:not(.active) {
+      background: var(--bg-4-color);
+    }
+  }
+
+  & .adder {    
+    border-right: var(--border);
   }
 }
